# geopm

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.update  Makefile.am  README  autogen.sh  config.h.in  configure.ac  endeavor-build.sh  geopm-ohpc.spec.in  geopm.spec.in  notes-profile-event-buffer.md  ohpc-submission.md  run_demo.sh  test_regions.report
.github/workflows/: build.yml
cmake/: Dependencies.cmake  DiscoverPythonTests.cmake  Googletest_main.cmake  Summary.cmake  Toolchain-gnu.cmake  Toolchain-intel.cmake  Tools.cmake  Utilities.cmake
contrib/json11/: json11.cpp
copying_headers/: MANIFEST.BSD3-intel  MANIFEST.EXEMPT
examples/: Makefile.mk  geopm_dynamic_power_demo.cpp  geopmtrace.py  ompt_mkl_test.c  simple_prof_c.c
examples/endpoint/: geopm_endpoint_demo.cpp  geopm_endpoint_demo.hpp  geopm_static_policy_demo.cpp
examples/fft/: ft.f90
examples/stubiogroup/: Makefile  StubIOGroup.cpp  StubIOGroup.hpp
integration/: README  agent_comparison.py  util.py
integration/apps/: Makefile.mk  amg.py  apps.py  geopmbench.py  minife.py  nekbone.py
integration/config/: run_env.sh
integration/env_demo/: geopm_build.env.sh  geopm_mcfly_env.sh  geopm_run_env.sh  geopmrc  test.sh
integration/experiment/: Makefile.mk  README  __init__.py  balancer_comparison.py  common_args.py  gen_slurm.sh  launch_util.py  node_efficiency.py  plot_balancer_power_limit.py  power_sweep.py  report.py  run_balancer_comparison_dgemm.py  util.py  (+6 more)
ompt-parallel-id-test/: Makefile  test-parallel-id.c
plugin/: AdaptiveFreqRegion.cpp  AdaptiveFreqRegion.hpp  BalancingDecider.cpp  BalancingDecider.hpp  BalancingDeciderRegister.cpp  EfficientFreqDecider.cpp  EfficientFreqDecider.hpp  EfficientFreqDeciderRegister.cpp  GoverningDecider.cpp  GoverningDecider.hpp  GoverningDeciderRegister.cpp  MPIComm.cpp  MPIComm.hpp  MPICommRegister.cpp  SimpleFreqDecider.cpp  SimpleFreqDecider.hpp
ronn/: GEOPM_CXX_MAN_Agent.3.ronn  GEOPM_CXX_MAN_Comm.3.ronn  GEOPM_CXX_MAN_EnergyEfficientAgent.3.ronn  GEOPM_CXX_MAN_EnergyEfficientRegion.3.ronn  GEOPM_CXX_MAN_MPIComm.3.ronn  GEOPM_CXX_MAN_MSR.3.ronn  GEOPM_CXX_MAN_MSRIOGroup.3.ronn  GEOPM_CXX_MAN_MonitorAgent.3.ronn  GEOPM_CXX_MAN_PlatformIO.3.ronn  GEOPM_CXX_MAN_PluginFactory.3.ronn  GEOPM_CXX_MAN_PowerBalancer.3.ronn  GEOPM_CXX_MAN_PowerBalancerAgent.3.ronn  GEOPM_CXX_MAN_PowerGovernor.3.ronn  GEOPM_CXX_MAN_PowerGovernorAgent.3.ronn  GEOPM_CXX_MAN_Profile.3.ronn  GEOPM_CXX_MAN_ProfileIOGroup.3.ronn  GEOPM_CXX_MAN_ProfileIOSample.3.ronn  GEOPM_CXX_MAN_SampleAggregator.3.ronn  geopm.7.ronn  geopm.7.ronn.in  geopm_agent_c.3.ronn  geopm_agent_power_balancer.7.ronn  geopm_agent_power_governor.7.ronn  geopm_endpoint_c.3.ronn  geopm_error.3.ronn  geopm_pio_c.3.ronn  geopm_topo_c.3.ronn  geopmanalysis.1.ronn  geopmendpoint.1.ronn  geopmlaunch.1.ronn  geopmplotter.1.ronn  geopmwrite.1.ronn  index.txt
scripts/: CMakeLists.txt  Makefile.mk  gen_run.py  geopm_launcher.py  geopm_srun
scripts/geopmpy/: __init__.py  agent.py  analysis.py  bench.py  error.py  io.py  launcher.py  pio.py  plotter.py  policy_store.py  topo.py
scripts/test/: TestAffinity.py  TestAnalysis.py  TestPowerSweepAnalysis.py
specs/: geopm-gcc-mvapich2-quartz.spec  geopm-intel-mvapich2-quartz.spec
src/: Accumulator.cpp  Accumulator.hpp  Agent.cpp  Agent.hpp  Agg.cpp  All2allModelRegion.cpp  All2allModelRegion.hpp  ApplicationIO.cpp  ApplicationIO.hpp  ApplicationRecordLog.cpp  ApplicationRecordLog.hpp  ApplicationSampler.cpp  ApplicationSampler.hpp  ApplicationStatus.cpp  ApplicationStatus.hpp  BalancingAgent.cpp  BalancingAgent.hpp  BarrierModelRegion.cpp  BarrierModelRegion.hpp  BusyWaitIOGroup.cpp  BusyWaitIOGroup.hpp  CPUFreqLimitsIOGroup.hpp  CombinedSignal.cpp  CombinedSignal.hpp  Comm.cpp  Comm.hpp  ControlMessage.cpp  Controller.cpp  Controller.hpp  CpuinfoIOGroup.cpp  DGEMMModelRegion.cpp  DGEMMModelRegion.hpp  Daemon.cpp  Decider.cpp  Decider.hpp  DeciderFactory.hpp  DefaultProfile.cpp  DerivativeSignal.cpp  DerivativeSignal.hpp  DifferenceSignal.cpp  (+224 more)
test/: AggTest.cpp  ApplicationIOTest.cpp  ApplicationRecordLogTest.cpp  ApplicationSamplerTest.cpp  BalancingDeciderTest.cpp  CMakeLists.txt  CombinedSignalTest.cpp  CommAbTest.cpp  CommMPIImpTest.cpp  ControllerTest.cpp  DaemonTest.cpp  DerivativeSignalTest.cpp  DifferenceSignalTest.cpp  ELFTest.cpp  EditDistEpochRecordFilterTest.cpp  EditDistPeriodicityDetectorTest.cpp  EfficientFreqDeciderTest.cpp  EndpointTest.cpp  EndpointTestIntegration.cpp  EndpointUserTest.cpp  EnergyEfficientAgentTest.cpp  EnergyEfficientRegionTest.cpp  EnvironmentTest.cpp  FilePolicyTest.cpp  FrequencyMapAgentTest.cpp  GoverningDeciderTest.cpp  HintAggregatorTest.cpp  InternalProfile.cpp  InternalProfile.hpp  KProfileTest.cpp  KProfileTestIntegration.cpp  KontrollerIntegrationTest.cpp  KontrollerTest.cpp  MPIFrequencyTest.cpp  MPIInterfaceTest.cpp  MPIOMPTTest.cpp  MPIProfileTest.cpp  MPITreeCommunicatorTest.cpp  MSRFieldControlTest.cpp  MSRFieldSignalTest.cpp  (+104 more)
test/constructor-static-bug/: Makefile  SingletonName.cpp  SingletonName.hpp  test_dlopen_singleton.c
test/plugin/: TestPlugin.cpp  TestPlugin.hpp
test_integration/: Makefile.mk  __init__.py  geopm_launcher.py  geopm_test_integration.py  geopm_test_launcher.py  temp_power_sweep.py  test_ee_freq_sweep.py  test_ee_freq_sweep_report_filter.sh  test_ee_mpi_imbalance.py  test_ee_scaling_spin_mix.cpp  test_ee_scaling_spin_mix.py  test_ee_short_regions.cpp  test_ee_stream_dgemm_mix.cpp  test_ee_stream_dgemm_mix.py  test_ee_stream_dgemm_spin.cpp  test_enforce_policy.py  test_epoch_inference.cpp  test_epoch_inference.py  test_monitor_sleep.py  test_plugin_static_policy.py  test_power_sweep.cpp  test_power_sweep.mk  test_power_sweep.py  test_profile_policy.py  test_scaling_region.py  test_static_policy.py  test_template.py.in  test_thread_progress.cpp  test_thread_progress.mk  test_thread_progress.py
tutorial/: ModelApplication.cpp  ModelRegion.cpp  ModelRegion.hpp  README.md  tutorial_1.c  tutorial_4.c  tutorial_6.cpp  tutorial_6.sh  tutorial_6_config.json  tutorial_build_intel.sh  tutorial_env.sh
(+411 files in other folders)
